feat: implement reactor POM staleness detection and watcher improvements
- What: Added reactor POM tracking to WorkspaceWatcher and workspace manifest records, and added a warning notification popup in WorkspaceSession with a "Sync" action when POM changes are detected.
- Why: Keeps the server's workspace classpath/JDK state in sync with disk POM files (such as after git branch switches or dependency updates), letting the user know they need to run 'mvn process-test-classes'.
- How:
  - WorkspaceWatcher tracks baseline mtime and size of POM files, returning WORKSPACE_CHANGED or POM_CHANGED.
  - WorkspaceSession checks for changes every 2 seconds, displaying a window/showMessageRequest when POMs change, protected by an event-loop-safe pomNotificationPending guard.
  - Workspace manifest records store relative pomPaths for reactor modules, which are initialized during lathe:sync.
  - Direct test instantiations are updated to pass List.of() to verify backward-compatible schema behaviors.
  - WorkspaceWatcherTest is refactored for DRY compliance, moving mock manifest setup to @BeforeEach.