@@ -42,7 +42,7 @@ class WorkspaceManifestWriterTest {
                 Path.of("/cache/jdks/Example-Vendor/21.0.1"))
             .withTypeIndex(Path.of("/cache/type-index/jdks/Example-Vendor/21.0.1/index.json"));
 
-    writer().write(workspaceRoot, List.of(dep), jdk, null);
+    writer().write(workspaceRoot, List.of(dep), jdk, null, List.of("pom.xml"));
 
     final var manifest =
         workspaceRoot.resolve(LatheLayout.LATHE_DIR).resolve(LatheLayout.WORKSPACE_JSON);
@@ -57,19 +57,20 @@ class WorkspaceManifestWriterTest {
     assertThat(data.jdk().typeIndex().toString())
         .isEqualTo("/cache/type-index/jdks/Example-Vendor/21.0.1/index.json");
     assertThat(data.dependencySources()).hasSize(1);
-    final var entry = data.dependencySources().get(0);
+    final var entry = data.dependencySources().getFirst();
     assertThat(entry.gav()).isEqualTo("com.example:dep:1");
     assertThat(entry.jar()).isEqualTo("/repo/dep.jar");
     assertThat(entry.status()).isEqualTo(SourceStatus.PRESENT);
     assertThat(entry.dir()).isEqualTo("/cache/dep");
     assertThat(entry.classpath()).containsExactly("/repo/transitive.jar");
+    assertThat(data.pomPaths()).containsExactly("pom.xml");
   }
 
   @Test
   void write_missingJdkSource_hasNullSourceDir() throws Exception {
     final var jdk = JdkSource.missing("Example Vendor", "21.0.1", Path.of("/jdk"));
 
-    writer().write(workspaceRoot, List.of(), jdk, null);
+    writer().write(workspaceRoot, List.of(), jdk, null, List.of("pom.xml"));
 
     final var manifest =
         workspaceRoot.resolve(LatheLayout.LATHE_DIR).resolve(LatheLayout.WORKSPACE_JSON);
@@ -82,14 +83,14 @@ class WorkspaceManifestWriterTest {
   @Test
   void write_sameContent_skipsWrite() throws Exception {
     final var jdk = JdkSource.missing("Vendor", "21", Path.of("/jdk"));
-    writer().write(workspaceRoot, List.of(), jdk, null);
+    writer().write(workspaceRoot, List.of(), jdk, null, List.of("pom.xml"));
 
     final var manifest =
         workspaceRoot.resolve(LatheLayout.LATHE_DIR).resolve(LatheLayout.WORKSPACE_JSON);
     final var sentinel = FileTime.fromMillis(1_000_000L);
     Files.setLastModifiedTime(manifest, sentinel);
 
-    writer().write(workspaceRoot, List.of(), jdk, null);
+    writer().write(workspaceRoot, List.of(), jdk, null, List.of("pom.xml"));
 
     assertThat(Files.getLastModifiedTime(manifest)).isEqualTo(sentinel);
   }
@@ -106,7 +107,7 @@ class WorkspaceManifestWriterTest {
         JdkSource.present(
             "Vendor", "21", Path.of("/jdk"), Path.of("/jdk/src.zip"), Path.of("/cache/jdk"));
 
-    writer().write(workspaceRoot, deps, jdk, null);
+    writer().write(workspaceRoot, deps, jdk, null, List.of("pom.xml"));
 
     final var manifest =
         workspaceRoot.resolve(LatheLayout.LATHE_DIR).resolve(LatheLayout.WORKSPACE_JSON);
